temp/objects/Election__c.object
<CustomObject>
    <description>Holds information about elections.</description>
    <label>Election</label>
    <nameField>
        <label>Election Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the election</description>
        <label>End  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time at which the system will stop accepting votes.</description>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the election is open for voting.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>